--- a/static/css/components/_page.scss
+++ b/static/css/components/_page.scss
@@ -2,24 +2,22 @@
   min-width: units(20);
 
   &::after {
+    background-color: rgba(0, 0, 0, .5);
     bottom: 0;
     content: '';
-    background-color: rgba(0, 0, 0, .5);
+    display: none;
     left: 0;
-    opacity: 0;
-    pointer-events: none;
     position: fixed;
     right: 0;
     top: 0;
-    will-change: opacity;
   }
 
   &--menu-open {
     overflow: hidden;
 
     &::after {
-      opacity: 1;
-      pointer-events: all;
+      @include fade-in;
+      display: block;
     }
   }
 }
